schema/testdata/validation_name_clashes_enum/schema.keel
message Foo {
}

model ModelWithActions {
    fields {
        foo Text
    }

    actions {
        create createModel() with (foo)
        list listModel()
        update updateModel(id) with (foo)
    }

    actions {
        read readModel(Foo) returns (Foo)
    }
}

// Begin invalid names - model
enum CreateModelInput {
}

enum ListModelInput {
}

enum ListModelConnection {
}

enum ListModelEdge {
}

enum UpdateModelInput {
}

enum AuthenticateInput {
}

enum AuthenticateResponse {
}

enum RequestPasswordInput {
}

enum RequestPasswordResponse {
}

enum RequestPasswordResetInput {
}

enum RequestPasswordResetResponse {
}

enum PageInfo {
}

enum String {
}

enum Number {
}

enum Boolean {
}

enum Request {
}

enum Response {
}

enum Array {
}

enum Object {
}

enum Error {
}

enum Mutation {
}

enum Query {
}

enum Subscription {
}
